compilers/labs/lab1/code/src/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ε
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList
   10           | VarDec error ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ε
   16       | ID

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID LP error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC

   28 StmtList: ε
   29         | Stmt StmtList

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | Exp error

   37 DefList: ε
   38        | Def DefList

   39 Def: Specifier DecList SEMI
   40    | Specifier error SEMI
   41    | Specifier DecList error

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT
   64    | Exp LB error RB
   65    | Exp ASSIGNOP error
   66    | LP error RP
   67    | ID LP error RP
   68    | Exp LB Exp error RB

   69 Args: Exp COMMA Args
   70     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 10 20 23 36 40 41 64 65 66 67 68
    STRUCT (258) 13 14
    RETURN (259) 32
    IF (260) 33 34
    ELSE (261) 34
    WHILE (262) 35
    SEMI (263) 4 5 30 32 39 40
    COMMA (264) 9 24 43 69
    ASSIGNOP (265) 45 46 65
    PLUS (266) 50
    MINUS (267) 51 55
    STAR (268) 52
    DIV (269) 53
    AND (270) 47
    OR (271) 48
    NOT (272) 56
    LP (273) 21 22 23 33 34 35 54 57 58 66 67
    RP (274) 21 22 23 33 34 35 54 57 58 66 67
    LB (275) 19 20 59 64 68
    RB (276) 19 20 59 64 68
    LC (277) 13 27
    RC (278) 13 27
    TYPE (279) 11
    INT (280) 19 62
    FLOAT (281) 63
    ID (282) 16 17 18 21 22 23 57 58 60 61 67
    RELOP (283) 49
    DOT (284) 60
    LOWER_THAN_NOT (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program (33)
        on left: 1
        on right: 0
    ExtDefList (34)
        on left: 2 3
        on right: 1 3
    ExtDef (35)
        on left: 4 5 6 7
        on right: 3
    ExtDecList (36)
        on left: 8 9 10
        on right: 4 9 10
    Specifier (37)
        on left: 11 12
        on right: 4 5 6 7 26 39 40 41
    StructSpecifier (38)
        on left: 13 14
        on right: 12
    OptTag (39)
        on left: 15 16
        on right: 13
    Tag (40)
        on left: 17
        on right: 14
    VarDec (41)
        on left: 18 19 20
        on right: 8 9 10 19 20 26 44 45
    FunDec (42)
        on left: 21 22 23
        on right: 6
    VarList (43)
        on left: 24 25
        on right: 21 24
    ParamDec (44)
        on left: 26
        on right: 24 25
    CompSt (45)
        on left: 27
        on right: 6 31
    StmtList (46)
        on left: 28 29
        on right: 27 29
    Stmt (47)
        on left: 30 31 32 33 34 35 36
        on right: 29 33 34 35
    DefList (48)
        on left: 37 38
        on right: 13 27 38
    Def (49)
        on left: 39 40 41
        on right: 38
    DecList (50)
        on left: 42 43
        on right: 39 41 43
    Dec (51)
        on left: 44 45
        on right: 42 43
    Exp (52)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 30 32 33 34 35 36 45 46 47 48 49 50 51 52 53 54 55 56 59 60 64 65 68 69 70
    Args (53)
        on left: 69 70
        on right: 57 69


State 0

    0 $accept: • Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   13 StructSpecifier: STRUCT • OptTag LC DefList RC
   14                | STRUCT • Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 2

   11 Specifier: TYPE •

    $default  reduce using rule 11 (Specifier)


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef • ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • error

    error  shift, and go to state 13
    SEMI   shift, and go to state 14
    ID     shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   12 Specifier: StructSpecifier •

    $default  reduce using rule 12 (Specifier)


State 8

   16 OptTag: ID •
   17 Tag: ID •

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 17 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 19


State 10

   14 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end •

    $default  accept


State 12

    3 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 13

    7 ExtDef: Specifier error •

    $default  reduce using rule 7 (ExtDef)


State 14

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 15

   18 VarDec: ID •
   21 FunDec: ID • LP VarList RP
   22       | ID • LP RP
   23       | ID • LP error RP

    LP  shift, and go to state 20

    $default  reduce using rule 18 (VarDec)


State 16

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 21


State 17

    8 ExtDecList: VarDec •
    9           | VarDec • COMMA ExtDecList
   10           | VarDec • error ExtDecList
   19 VarDec: VarDec • LB INT RB
   20       | VarDec • LB error RB

    error  shift, and go to state 22
    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    SEMI  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 19

   13 StructSpecifier: STRUCT OptTag LC • DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 20

   21 FunDec: ID LP • VarList RP
   22       | ID LP • RP
   23       | ID LP • error RP

    error   shift, and go to state 30
    STRUCT  shift, and go to state 1
    RP      shift, and go to state 31
    TYPE    shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


State 21

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 22

   10 ExtDecList: VarDec error • ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


State 23

    9 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 37
    VarDec      go to state 17


State 24

   19 VarDec: VarDec LB • INT RB
   20       | VarDec LB • error RB

    error  shift, and go to state 38
    INT    shift, and go to state 39


State 25

   27 CompSt: LC • DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 29


State 26

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 27

   39 Def: Specifier • DecList SEMI
   40    | Specifier • error SEMI
   41    | Specifier • DecList error

    error  shift, and go to state 41
    ID     shift, and go to state 35

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 28

   13 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 45


State 29

   38 DefList: Def • DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 29


State 30

   23 FunDec: ID LP error • RP

    RP  shift, and go to state 47


State 31

   22 FunDec: ID LP RP •

    $default  reduce using rule 22 (FunDec)


State 32

   26 ParamDec: Specifier • VarDec

    ID  shift, and go to state 35

    VarDec  go to state 48


State 33

   21 FunDec: ID LP VarList • RP

    RP  shift, and go to state 49


State 34

   24 VarList: ParamDec • COMMA VarList
   25        | ParamDec •

    COMMA  shift, and go to state 50

    $default  reduce using rule 25 (VarList)


State 35

   18 VarDec: ID •

    $default  reduce using rule 18 (VarDec)


State 36

   10 ExtDecList: VarDec error ExtDecList •

    $default  reduce using rule 10 (ExtDecList)


State 37

    9 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 9 (ExtDecList)


State 38

   20 VarDec: VarDec LB error • RB

    RB  shift, and go to state 51


State 39

   19 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 52


State 40

   27 CompSt: LC DefList • StmtList RC

    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 25
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61

    $default  reduce using rule 28 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


State 41

   40 Def: Specifier error • SEMI

    SEMI  shift, and go to state 66


State 42

   19 VarDec: VarDec • LB INT RB
   20       | VarDec • LB error RB
   44 Dec: VarDec •
   45    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 24

    $default  reduce using rule 44 (Dec)


State 43

   39 Def: Specifier DecList • SEMI
   41    | Specifier DecList • error

    error  shift, and go to state 68
    SEMI   shift, and go to state 69


State 44

   42 DecList: Dec •
   43        | Dec • COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 42 (DecList)


State 45

   13 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 13 (StructSpecifier)


State 46

   38 DefList: Def DefList •

    $default  reduce using rule 38 (DefList)


State 47

   23 FunDec: ID LP error RP •

    $default  reduce using rule 23 (FunDec)


State 48

   19 VarDec: VarDec • LB INT RB
   20       | VarDec • LB error RB
   26 ParamDec: Specifier VarDec •

    LB  shift, and go to state 24

    $default  reduce using rule 26 (ParamDec)


State 49

   21 FunDec: ID LP VarList RP •

    $default  reduce using rule 21 (FunDec)


State 50

   24 VarList: ParamDec COMMA • VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 71
    ParamDec         go to state 34


State 51

   20 VarDec: VarDec LB error RB •

    $default  reduce using rule 20 (VarDec)


State 52

   19 VarDec: VarDec LB INT RB •

    $default  reduce using rule 19 (VarDec)


State 53

   32 Stmt: RETURN • Exp SEMI

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 72


State 54

   33 Stmt: IF • LP Exp RP Stmt
   34     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 73


State 55

   35 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 74


State 56

   55 Exp: MINUS • Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 75


State 57

   56 Exp: NOT • Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 76


State 58

   54 Exp: LP • Exp RP
   66    | LP • error RP

    error  shift, and go to state 77
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 78


State 59

   62 Exp: INT •

    $default  reduce using rule 62 (Exp)


State 60

   63 Exp: FLOAT •

    $default  reduce using rule 63 (Exp)


State 61

   57 Exp: ID • LP Args RP
   58    | ID • LP RP
   61    | ID •
   67    | ID • LP error RP

    LP  shift, and go to state 79

    $default  reduce using rule 61 (Exp)


State 62

   31 Stmt: CompSt •

    $default  reduce using rule 31 (Stmt)


State 63

   27 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 80


State 64

   29 StmtList: Stmt • StmtList

    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 25
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61

    $default  reduce using rule 28 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 81
    Stmt      go to state 64
    Exp       go to state 65


State 65

   30 Stmt: Exp • SEMI
   36     | Exp • error
   46 Exp: Exp • ASSIGNOP Exp
   47    | Exp • AND Exp
   48    | Exp • OR Exp
   49    | Exp • RELOP Exp
   50    | Exp • PLUS Exp
   51    | Exp • MINUS Exp
   52    | Exp • STAR Exp
   53    | Exp • DIV Exp
   59    | Exp • LB Exp RB
   60    | Exp • DOT ID
   64    | Exp • LB error RB
   65    | Exp • ASSIGNOP error
   68    | Exp • LB Exp error RB

    error     shift, and go to state 82
    SEMI      shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    LB        shift, and go to state 91
    RELOP     shift, and go to state 92
    DOT       shift, and go to state 93


State 66

   40 Def: Specifier error SEMI •

    $default  reduce using rule 40 (Def)


State 67

   45 Dec: VarDec ASSIGNOP • Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 94


State 68

   41 Def: Specifier DecList error •

    $default  reduce using rule 41 (Def)


State 69

   39 Def: Specifier DecList SEMI •

    $default  reduce using rule 39 (Def)


State 70

   43 DecList: Dec COMMA • DecList

    ID  shift, and go to state 35

    VarDec   go to state 42
    DecList  go to state 95
    Dec      go to state 44


State 71

   24 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 24 (VarList)


State 72

   32 Stmt: RETURN Exp • SEMI
   46 Exp: Exp • ASSIGNOP Exp
   47    | Exp • AND Exp
   48    | Exp • OR Exp
   49    | Exp • RELOP Exp
   50    | Exp • PLUS Exp
   51    | Exp • MINUS Exp
   52    | Exp • STAR Exp
   53    | Exp • DIV Exp
   59    | Exp • LB Exp RB
   60    | Exp • DOT ID
   64    | Exp • LB error RB
   65    | Exp • ASSIGNOP error
   68    | Exp • LB Exp error RB

    SEMI      shift, and go to state 96
    ASSIGNOP  shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    LB        shift, and go to state 91
    RELOP     shift, and go to state 92
    DOT       shift, and go to state 93


State 73

   33 Stmt: IF LP • Exp RP Stmt
   34     | IF LP • Exp RP Stmt ELSE Stmt

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 97


State 74

   35 Stmt: WHILE LP • Exp RP Stmt

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 98


State 75

   46 Exp: Exp • ASSIGNOP Exp
   47    | Exp • AND Exp
   48    | Exp • OR Exp
   49    | Exp • RELOP Exp
   50    | Exp • PLUS Exp
   51    | Exp • MINUS Exp
   52    | Exp • STAR Exp
   53    | Exp • DIV Exp
   55    | MINUS Exp •
   59    | Exp • LB Exp RB
   60    | Exp • DOT ID
   64    | Exp • LB error RB
   65    | Exp • ASSIGNOP error
   68    | Exp • LB Exp error RB

    LB   shift, and go to state 91
    DOT  shift, and go to state 93

    $default  reduce using rule 55 (Exp)


State 76

   46 Exp: Exp • ASSIGNOP Exp
   47    | Exp • AND Exp
   48    | Exp • OR Exp
   49    | Exp • RELOP Exp
   50    | Exp • PLUS Exp
   51    | Exp • MINUS Exp
   52    | Exp • STAR Exp
   53    | Exp • DIV Exp
   56    | NOT Exp •
   59    | Exp • LB Exp RB
   60    | Exp • DOT ID
   64    | Exp • LB error RB
   65    | Exp • ASSIGNOP error
   68    | Exp • LB Exp error RB

    LB   shift, and go to state 91
    DOT  shift, and go to state 93

    $default  reduce using rule 56 (Exp)


State 77

   66 Exp: LP error • RP

    RP  shift, and go to state 99


State 78

   46 Exp: Exp • ASSIGNOP Exp
   47    | Exp • AND Exp
   48    | Exp • OR Exp
   49    | Exp • RELOP Exp
   50    | Exp • PLUS Exp
   51    | Exp • MINUS Exp
   52    | Exp • STAR Exp
   53    | Exp • DIV Exp
   54    | LP Exp • RP
   59    | Exp • LB Exp RB
   60    | Exp • DOT ID
   64    | Exp • LB error RB
   65    | Exp • ASSIGNOP error
   68    | Exp • LB Exp error RB

    ASSIGNOP  shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RP        shift, and go to state 100
    LB        shift, and go to state 91
    RELOP     shift, and go to state 92
    DOT       shift, and go to state 93


State 79

   57 Exp: ID LP • Args RP
   58    | ID LP • RP
   67    | ID LP • error RP

    error  shift, and go to state 101
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 102
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp   go to state 103
    Args  go to state 104


State 80

   27 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 27 (CompSt)


State 81

   29 StmtList: Stmt StmtList •

    $default  reduce using rule 29 (StmtList)


State 82

   36 Stmt: Exp error •

    $default  reduce using rule 36 (Stmt)


State 83

   30 Stmt: Exp SEMI •

    $default  reduce using rule 30 (Stmt)


State 84

   46 Exp: Exp ASSIGNOP • Exp
   65    | Exp ASSIGNOP • error

    error  shift, and go to state 105
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 106


State 85

   50 Exp: Exp PLUS • Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 107


State 86

   51 Exp: Exp MINUS • Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 108


State 87

   52 Exp: Exp STAR • Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 109


State 88

   53 Exp: Exp DIV • Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 110


State 89

   47 Exp: Exp AND • Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 111


State 90

   48 Exp: Exp OR • Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61

    Exp  go to state 112


State 91

   59 Exp: Exp LB • Exp RB
   64    | Exp LB • error RB
   68    | Exp LB • Exp error RB
